fixed dropdown z-index issue

--- a/source/style.css
+++ b/source/style.css
@@ -429,6 +429,7 @@ footer > a {
     filter: drop-shadow(0px 5px 5px hsl(0deg 0.65% 38.38%));
     padding-right: 50px;
     cursor: default;
+    z-index: 12;
 }
 .product-dropdown a, .company-dropdown a, .connect-dropdown a {
     text-decoration: none;
